--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,10 @@ h6 {
   font-family: "Outfit", sans-serif;
 }
 
+/* h1,h2{
+  font-size: 1rem;
+} */
+
 /* ================ NavBar Styles ================*/
 .nav-link {
   font-weight: 500;
@@ -73,6 +77,7 @@ h6 {
 /* ===================== Home Page Styles ======================= */
 .hero-section {
   background-color: #f8f9fa;
+  padding: 2rem 0rem;
 }
 
 .home-tagline {
@@ -80,18 +85,24 @@ h6 {
   font-size: 1.8rem;
 }
 .hero-title {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 700;
   color: #212529;
   line-height: 1.4;
 }
-
 .hero-img-wrap img {
   transition: transform 0.4s ease;
 }
-.home-main-here-img{
-  /* width: 22rem; */
-  width: 60%;
+
+.home-main-hero-img,
+.service-hero-img,
+.pricing-hero-img,
+.booking-hero-img,
+.contact-hero-img {
+  border-radius: 20px;
+  box-shadow: 0 12px 28px rgba(0, 0, 0, 0.08);
+  transition: transform 0.3s ease;
+  width: 55%;
 }
 
 @media (max-width: 767px) {
@@ -106,20 +117,16 @@ h6 {
   border-radius: 12px;
   transition: transform 0.3s ease;
 }
-
 .service-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.07);
 }
-
 .card-img-top {
   height: 180px;
   object-fit: cover;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
 }
-
-/* Light pastel backgrounds */
 .bg-light-pink {
   background-color: #f8f9fa;
 }
@@ -159,34 +166,28 @@ h6 {
   background-color: #fff;
   transition: border 0.3s ease;
 }
-
 .circle-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
 .service-title {
   font-size: 0.95rem;
   font-weight: 500;
   color: #333;
 }
-
 @media (max-width: 575.98px) {
   .circle-img {
     width: 80px;
     height: 80px;
   }
 }
-
 .welcome-section {
   background: #f8f9fa;
 }
-
 .welcome-section .bg-light {
   background-color: #fdfdfd !important;
 }
-
 @media (max-width: 767.98px) {
   .welcome-section .btn {
     font-size: 1rem;
@@ -196,11 +197,9 @@ h6 {
 .why-section {
   background-color: #f8f9fa;
 }
-
 .why-section h6 {
   font-size: 1rem;
 }
-
 .why-section p {
   font-size: 0.92rem;
   line-height: 1.6;
@@ -210,19 +209,16 @@ h6 {
   overflow: hidden;
   position: relative;
 }
-
 .carousel-wrapper {
   overflow: hidden;
   position: relative;
 }
-
 .carousel-track {
   display: flex;
   gap: 1.5rem;
   animation: scrollLeft 40s linear infinite;
   width: fit-content;
 }
-
 .review-box {
   flex: 0 0 auto;
   width: 280px;
@@ -283,7 +279,7 @@ h6 {
   transform: scale(1.05);
 }
 .cta-section {
-  background: url("./Assets/footer_bacground.jpg") center center / cover
+  background: url("./Assets/img18.jpg") center center / cover
     no-repeat;
   background-attachment: fixed;
   padding: 50px 0;
@@ -295,7 +291,6 @@ h6 {
   position: absolute;
   inset: 0;
   background: rgba(0, 0, 0, 0.4);
-  backdrop-filter: blur(4px);
 }
 
 .cta-box {
@@ -358,15 +353,73 @@ h6 {
   max-width: 700px;
   margin: 0 auto;
 }
+.gallery-thumb {
+  transition: transform 0.4s ease, box-shadow 0.3s ease;
+}
+.gallery-card:hover .gallery-thumb {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+
+.gallery-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(20, 20, 20, 0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1055;
+  padding: 20px;
+  overflow-y: auto;
+}
+
+.modal-content-box {
+  max-width: 800px;
+  width: 100%;
+  background: #1a1a1a;
+  padding: 1.5rem;
+  border-radius: 16px;
+  box-shadow: 0 10px 25px rgba(255, 255, 255, 0.1);
+  text-align: center;
+  position: relative;
+  animation: zoomIn 0.4s ease;
+}
+
+.modal-img {
+  max-width: 100%;
+  max-height: 70vh;
+  border-radius: 12px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+}
+
+@keyframes zoomIn {
+  from {
+    transform: scale(0.8);
+    opacity: 0.2;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@media (max-width: 768px) {
+  .modal-img {
+    max-height: 60vh;
+  }
+  .modal-content-box {
+    padding: 1rem;
+  }
+}
 
 /* ===================== Services Page Styles ====================== */
 .services-hero-section {
   background-color: #f8f9fa;
-}
-
-.services-hero-title {
-  font-size: 2.3rem;
-  line-height: 1.3;
+  padding: 4rem 0rem;
 }
 
 .services-hero-desc {
@@ -438,6 +491,7 @@ h6 {
 /*  ==================== Pricing Page Styles ======================= */
 .pricing-hero-section {
   background-color: #f8f9fa;
+  padding: 5rem 0rem;
 }
 
 .pricing-hero-title {
@@ -481,6 +535,7 @@ h6 {
 /* ===================== Booking Appointment ==================== */
 .booking-hero-section {
   background-color: #f8f9fa;
+  padding: 6rem 0rem;
 }
 
 .booking-hero-section h1 {
@@ -506,7 +561,7 @@ h6 {
 .pricing-cta-section,
 .services-cta-section,
 .about-cta-section {
-  background: url("./Assets/footer_bacground.jpg") center center / cover
+  background: url("./Assets/img20.jpg") center center / cover
     no-repeat;
   backdrop-filter: blur(10px);
   background-attachment: fixed;
@@ -527,12 +582,12 @@ th {
 .table thead tr th,
 .table tbody tr td {
   padding: 0.8rem 0rem;
-  /* white-space: nowrap; */
 }
 
 /* ===================== Contact Page Styles ====================== */
 .contact-hero-section {
   background-color: #f8f9fa;
+  padding: 7rem 0rem;
 }
 
 .contact-hero-section h1 {
